k8s/stage/invest-gpt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invest-gpt-stage
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app: invest-gpt
    environment: stage
