k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invest-gpt-stage-ingres
  labels:
    type: path-based
  # ingress:
  # enabled: true
  #className: "alb"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name:  invest-gpt-stage
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=4000  # Increase idle timeout for WebSocket connections
    #alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=lb_cookie
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=false
    alb.ingress.kubernetes.io/cors-allow-methods: GET, PUT, POST, DELETE, PATCH, OPTIONS
    alb.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-Amz-Date
    alb.ingress.kubernetes.io/cors-allow-origin: '*'
    # SSL Configs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:me-central-1:767398024024:certificate/4fe25b1c-3bc5-4094-9033-4198b68685e9
    #alb.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  ingressClassName: alb
  rules:
    - host: "investgpt-stage.investmarket.ae"   # Set your domain or ALB DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invest-gpt-stage  # This should match the Service name
                port: 
                  number: 8001  # This should match the Service port
